--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.0.0",
     "@hookform/resolvers": "^5.0.1",
     "@react-oauth/google": "^0.12.2",
+    "antd": "^5.25.2",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
     "lucide-react": "^0.510.0",
