--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=school-health-management
+
+# ==========================================
+# DATABASE (SQL Server) CONFIGURATION
+# ==========================================
+spring.datasource.url=jdbc:sqlserver://NAAMMM;databaseName=Test_SWP;encrypt=true;trustServerCertificate=true;
+spring.datasource.username=sa
+spring.datasource.password=12345
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+
+# ==========================================
+# JPA & HIBERNATE CONFIGURATION
+# ==========================================
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
