--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,12 +5,12 @@ spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=mySWP;encrypt
 spring.datasource.username=sa
 spring.datasource.password=12345
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
-
-spring.security.user.name=sa
-spring.security.user.password=111
+#
+#spring.security.user.name=sa
+#spring.security.user.password=111
