--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -14,8 +14,9 @@ spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 # JWT Properties
 
-school.health.jwtSecret=abc123def
+school.health.jwtSecret=QwErTyUiOpAsDfGhJkLzXcVbNmQwErTy123456
 school.health.jwtExpirationMs=86400000
