--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=school-health-management
 server.port=8080
 
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=mySWP;encrypt=true;trustServerCertificate=true
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=myschool;encrypt=true;trustServerCertificate=true
 spring.datasource.username=sa
 spring.datasource.password=12345
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
