--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -20,4 +20,5 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 
 school.health.jwtSecret=QwErTyUiOpAsDfGhJkLzXcVbNmQwErTy123456
 school.health.jwtExpirationMs=86400000
+school.health.jwtRefreshExpirationMs=604800000
 logging.level.org.springframework.security=TRACE
