them get all healthprofile cho parent va admin

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -14,3 +14,6 @@ spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
 #
 #spring.security.user.name=sa
 #spring.security.user.password=111
+#jwt.secret=QwErTyUiOpAsDfGhJkLzXcVbNmQwErTy123456
+#jwt.expiration=86400000
+
