--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -11,9 +11,28 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
-#
+
 #spring.security.user.name=sa
 #spring.security.user.password=111
 #jwt.secret=QwErTyUiOpAsDfGhJkLzXcVbNmQwErTy123456
 #jwt.expiration=86400000
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=qhuyddbmt123@gmail.com
+spring.mail.password=yueddylahdxmfjre
+spring.mail.from=${MAIL_FROM:qhuyddbmt123@gmail.com}
+
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+spring.mail.properties.mail.smtp.ssl.trust=*
+
+
+
+
+
 
