Add jwt cho login

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -12,10 +12,10 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
 
-#spring.security.user.name=sa
-#spring.security.user.password=111
-#jwt.secret=QwErTyUiOpAsDfGhJkLzXcVbNmQwErTy123456
-#jwt.expiration=86400000
+school.health.jwtSecret=QwErTyUiOpAsDfGhJkLzXcVbNmQwErTy123456
+school.health.jwtExpirationMs=86400000
+school.health.jwtRefreshExpirationMs=604800000
+logging.level.org.springframework.security=TRACE
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
