--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@react-oauth/google": "^0.12.2",
     "antd": "^5.25.2",
     "axios": "^1.9.0",
+    "bcryptjs": "^3.0.2",
     "bootstrap": "^5.3.6",
     "chart.js": "^4.4.9",
     "cors": "^2.8.5",
