them parentId filter voi validate date

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -36,4 +36,12 @@ spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
 spring.mail.properties.mail.smtp.ssl.trust=*
+# ==========================================
+# OPEN API CONFIGURATION
+# ==========================================
+open.api.title=HUY API TITLE
+open.api.version=1.0.0 by Huy
+open.api.description=Your API Description By HUY
+open.api.serverUrl=http://localhost:8080
+open.api.serverName=Local API by HUY
 
