--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -45,3 +45,8 @@ open.api.description=Your API Description By HUY
 open.api.serverUrl=http://localhost:8080
 open.api.serverName=Local API by HUY
 
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
