--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@hookform/resolvers": "^5.0.1",
+    "@lottiefiles/dotlottie-react": "^0.14.2",
     "@mui/material": "^7.2.0",
     "@mui/x-date-pickers": "^8.6.0",
     "@react-oauth/google": "^0.12.2",
