--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,7 +2,7 @@ erver.port=8080
 # ==========================================
 # DATABASE (SQL Server) CONFIGURATION
 # ==========================================
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=test;encrypt=true;trustServerCertificate=true;characterEncoding=UTF-8
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=test_fake;encrypt=true;trustServerCertificate=true;characterEncoding=UTF-8
 spring.datasource.username=sa
 spring.datasource.password=12345
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
