--- a/frontend/.env
+++ b/frontend/.env
@@ -8,4 +8,4 @@ VITE_API_NOTIFICATION='http://localhost:8080/api/notifications'
 VITE_API_AUTH='http://localhost:8080/api/auth'
 VITE_API_USER='http://localhost:8080/api'
 VITE_API_INVENTORY='http://localhost:8080/api/inventory'
-VITE_API_MEDICALEVENT='http://localhost:8080/api/medical-events'
+VITE_API_MEDICALEVENT='http://localhost:8080/api/nurse/medical-events'
